feat(snippets): Add aiife snippet in javascript

--- a/snippets/package.json
+++ b/snippets/package.json
@@ -7,6 +7,12 @@
           "typescript"
         ],
         "path": "./typescript.json"
+      },
+      {
+        "language": [
+          "javascript"
+        ],
+        "path": "./javascript.json"
       }
     ]
   }
